# python-proto-importer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  pyproject.toml
.github/: codecov.yml  renovate.json
.github/workflows/: ci.yml  release-crates.yml  release-github.yml  release-pypi.yml
doc/: README.ja.md
python_e2e/: .gitignore  Makefile.toml  README.md  pyproject.proto_importer.toml  pyproject.toml
python_e2e/configs/: config_alt_proto_path.toml  config_custom_out.toml  config_different_include.toml  config_empty_include.toml  config_full.toml  config_minimal.toml  config_mypy_only.toml  config_nested_out.toml  config_no_package.toml  config_package_nested.toml  config_relative_paths.toml  config_selective_inputs.toml  config_src_structure.toml  config_uv_python_exe.toml
python_e2e/proto/: thing1.proto  thing2.proto
python_e2e/proto/inventory/: inventory.proto
python_e2e/proto/payment/: payment.proto  types.proto
python_e2e/proto/user/: types.proto  user.proto
python_e2e/proto_alt/services/api/: status.proto
python_e2e/proto_alt/services/core/: health.proto
python_e2e/src/proto_importer_e2e/proto/billing/: billing.proto
python_e2e/src/proto_importer_e2e/proto/order/: order.proto
python_e2e/test_package/: __init__.py
python_e2e/tests/: test_generate_and_verify.py  test_generate_and_verify_extended.py
src/: config.rs  doctor.rs  lib.rs  main.rs  utils.rs
src/commands/: build.rs  check.rs  clean.rs
src/generator/: protoc.rs
src/postprocess/: apply.rs  fds.rs  mod.rs  rel_imports.rs
src/verification/: mod.rs  package_structure.rs  script_generator.rs
tests/: e2e_smoke.rs
