[package]
name = "python-proto-importer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
tempfile = "3"
walkdir = "2"
regex = "1"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.14"
