[project]
name = "proto_importer_e2e"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "grpcio==1.74.0",
  "grpcio-tools==1.74.0",
  "mypy==1.13.0",
  "pyright==1.1.403",
  "pytest==8.3.3",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.pyright]
# keep pyright strict but skip generated .py (we test .pyi types)
exclude = ["generated/**/*.py"]

[tool.mypy]
strict = true
ignore_missing_imports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proto_importer_e2e"]
