[project]
name = "proto_importer_e2e"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "grpcio==1.74.0",
  "grpcio-tools==1.74.0",
  "mypy==1.13.0",
  "pyright==1.1.403",
  "pytest==8.3.3",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.pyright]
# keep pyright strict but skip generated .py (we test .pyi types)
exclude = ["generated/**/*.py"]

[tool.mypy]
strict = true
ignore_missing_imports = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proto_importer_e2e"]

[tool.python_proto_importer]
backend = "protoc"
python_exe = ".venv/bin/python"
include = ["proto"]
inputs = ["proto/**/*.proto"]
out = "generated"
mypy = true
mypy_grpc = true
postprocess = { protoletariat = true, fix_pyi = true, create_package = true, exclude_google = true, pyright_header = true }

[tool.python_proto_importer.verify]
# verify types against generated stubs
mypy_cmd = ["uv", "run", "mypy", "--strict", "generated"]
pyright_cmd = ["uv", "run", "pyright", "generated/**/*.pyi"]
