[project]
name = "proto_importer_e2e"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = ["grpcio==1.74.0", "grpcio-tools==1.74.0"]

[dependency-groups]
dev = [
  "mypy==1.17.1",
  "pyright==1.1.403",
  "pytest==8.4.1",
  "grpc-stubs>=1.24",
  "grpcio-tools>=1.74",
  "mypy-protobuf==3.6.0",
  "types-protobuf>=5.28",
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.pyright]
# keep pyright strict but skip generated .py (we test .pyi types)
exclude = ["src/proto_importer_e2e/generated/**/*.py"]

[tool.mypy]
strict = true
ignore_missing_imports = false
# Exclude grpc files from strict checks as they are generated
exclude = ["src/proto_importer_e2e/generated/.*_grpc\\.py$"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proto_importer_e2e"]

# python_proto_importer config
[tool.python_proto_importer]
backend = "protoc"
python_exe = ".venv/bin/python"
include = ["."]
inputs = ["proto/**/*.proto"]
out = "src/proto_importer_e2e/generated"
mypy = true
mypy_grpc = true
postprocess = { relative_imports = true, fix_pyi = true, create_package = true, exclude_google = true, pyright_header = true }

[tool.python_proto_importer.verify]
# verify types against generated stubs
mypy_cmd = ["uv", "run", "mypy", "--strict", "src/proto_importer_e2e/generated"]
pyright_cmd = [
  "uv",
  "run",
  "pyright",
  "src/proto_importer_e2e/generated/**/*.pyi",
]
